add dominio y componente de contacto y servicios

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-portafolio-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lucianoarmoa98.github.io/portafolio_react",
+  "homepage": "https://incentivagroups.com/",
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
